--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
 					</div>
 
-					<img src="images/hand-shake.jpeg" alt="imagen de dos personas estirando la mano">
+					<img src="imagenes/fotodeproductos.jpeg" alt="Imagen de productos">
 
 				</div>
 			</section>
 			<section>
 				<div id="seccionTercera" class="container">
-					<img src="images/office-people.jpg" alt="imagen de personas caminando por unas oficinas">
+					<img src="imagenes/foto56.jpeg" alt="imagen de productos">
 					<div>
 					<h2>Hecha un vistazo a nuestro catalogo de productos.</h2>
 					<p>Contamos con una gran variedad de productos para cuidado personal y de Higiene.</p>
