--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<script src="https://kit.fontawesome.com/148afdfd8d.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -41,7 +42,12 @@
 			<ul id="main-nav">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="la-firma.html">Catalogo</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
+				<li>
+						<a class="whatsapp-btn" href="http://wa.me/+525522578910" target="_blank">
+							<i class="fab fa-whatsapp"></i>
+							55-2257-8910
+						</a>
+					</li>
 				<li><a href="tel:+5522578910"><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg> 55-2257-8910</a></li>
 			</ul>
 			
@@ -121,22 +127,15 @@
 	<footer>
 		<div id="PieDePagina" class="container">
 			<div>
-				<h3>Corporativo</h3>
+				<h3>Nosotros</h3>
 				<ul>
-					<li><a href="socios.html">socios</a></li>
-					<li><a href="empleos.html">trabaja con nosotros</a></li>
+					<li><a href="index.html">Pagina Principal</a></li>
 					<li><a href="contacto.html">contacto</a></li>
 				</ul>
 			</div>
+			
 			<div>
-				<h3>Legal</h3>
-				<ul>
-					<li><a href="condiciones.html">terminos y condiciones</a></li>
-					<li><a href="privacidad.html">politica de privacidad</a></li>
-				</ul>
-			</div>
-			<div>
-				<a href="index.html"><img src="images/logo.png" alt="logotipo"></a>
+				<a href="index.html"><img src="imagenes/logo.png" alt="logotipo"></a>
 				<div id="social">
 					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><path fill="#ffffff" d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg></a>
 					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><path fill="#ffffff" d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg></a>
