--- a/la-firma.html
+++ b/la-firma.html
@@ -47,9 +47,17 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="la-firma.html">Mas sobre nosotros</a></li>
 				
-				<li><a href="contacto.html">Contacto</a></li>
-				<li><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg> 1-234-567-8910</li>
-			</ul>
+				<li>
+						<a class="whatsapp-btn" href="http://wa.me/+525522578910" target="_blank">
+							<i class="fab fa-whatsapp"></i>
+							55-2257-8910
+						</a>
+					</li>
+					<li><a href="tel:+5522578910"><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20"
+								viewBox="0 0 512 512">
+								<path
+									d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
+							</svg> 55-2257-8910</a></li>
 		</nav>
 	</header>
 	<!-- cuerpo del documento -->
