--- a/la-firma.html
+++ b/la-firma.html
@@ -102,22 +102,14 @@
 	<footer>
 		<div id="PieDePagina1" class="container">
 			<div>
-				<h3>Corporativo</h3>
+				<h3>Nosotros</h3>
 				<ul>
-					<li><a href="socios.html">Socios</a></li>
-					<li><a href="empleos.html">Trabaja con nosotros</a></li>
-					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="index.html">Pagina Principal</a></li>
+					<li><a href="contacto.html">contacto</a></li>
 				</ul>
 			</div>
 			<div>
-				<h3>Legal</h3>
-				<ul>
-					<li><a href="condiciones.html">terminos y condiciones</a></li>
-					<li><a href="privacidad.html">politica de privacidad</a></li>
-				</ul>
-			</div>
-			<div>
-				<a href="index.html"><img src="images/logo.png" alt="logotipo"></a>
+				<a href="index.html"><img src="imagenes/logo.png" alt="logotipo"></a>
 				<div id="social">
 					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg></a>
 					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg></a>
