--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			
 			<ul id="main-nav">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#cat">Catalogo</a></li>
+				<li><a href="#seccionTercera">Catalogo</a></li>
 				<li>
 						<a class="whatsapp-btn" href="http://wa.me/+525522578910" target="_blank">
 							<i class="fab fa-whatsapp"></i>
@@ -92,7 +92,7 @@
 					<div>
 					<h2>Hecha un vistazo a nuestro catalogo de productos.</h2>
 					<p>Contamos con una gran variedad de productos para cuidado personal y de Higiene.</p>
-					<a id="cat" class="transparent" href="imagenes/Catalogo.pdf" download="Catalogo.pdf">Descargar Catalogo</a>
+					<a class="transparent" href="imagenes/Catalogo.pdf" download="Catalogo.pdf">Descargar Catalogo</a>
 					</div>
 				</div>
 			</section>
