--- a/casos-estudios.html
+++ b/casos-estudios.html
@@ -27,7 +27,11 @@
 	<meta name="theme-color" content="#ffffff">
 
 </head>
-
+<style>
+	.whatsapp.btn {
+	    margin-top: 19px;
+	}
+</style>
 
 <body>
 	<div id="todo">
