--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<h3>Nosotros</h3>
 				<ul>
 					<li><a href="index.html">Pagina Principal</a></li>
-					<li><a href=".top">contacto</a></li>
+					<li><a href="#navbar">contacto</a></li>
 				</ul>
 			</div>
 			
